<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".MainFragmentSecond">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="479dp"
            app:cardBackgroundColor="#604885"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/merheba"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/user"
                        android:textSize="30sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toEndOf="@id/linearLayout1"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/toplam"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/toplam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/_0_tl"
                        android:textSize="30sp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintBottom_toTopOf="@id/recyclerView">

            <Button
                android:id="@+id/btnTL"
                android:layout_marginEnd="5dp"
                android:text="@string/tl"
                android:textColor="#00FFFF"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btnEuro"
                android:text="@string/euro"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btnDolar"
                android:text="@string/dolar"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btnSterling"
                android:text="@string/sterling"
                android:padding="0dp"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="match_parent" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="visible"
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:clipToPadding="false"
            tools:listitem="@layout/recycler_view_element"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:background="@color/purple_500"
            android:src="@drawable/ic_baseline_add_24"
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>