<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".MainFragmentFirst">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/text1_4"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="30dp"
                android:outlineProvider="bounds"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/radiogroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text1"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/purple_200"
                    android:hint="@string/isminizi_giriniz"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:visibility="visible" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toTopOf="@+id/buttongeri"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <RadioButton
                    android:id="@+id/radio_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/erkek"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/radio_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/kadin"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/radio_no_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/neytral"
                    android:textColor="@color/black" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonkaydet"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@color/purple_500"
                android:text="@string/kaydet"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:strokeColor="@color/purple_500" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttongeri"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="4dp"
                android:background="#7036C6"
                android:text="@string/geri"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@color/purple_500" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>