<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/mybutton"
        android:padding="5dp"
        android:layout_height="80dp">

        <ImageView
            android:id="@+id/recyclerImage"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_home"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="5dp" />

        <TextView
            android:id="@+id/recyclerText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ev_kirasi"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/recyclerPrice"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toEndOf="@+id/recyclerImage"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/recyclerPrice"
            android:orientation="horizontal"
             android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/recyclerPriceText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_150"
                android:textSize="30sp"
                android:layout_marginEnd="8dp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/recyclerPriceCurrency"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:text="@string/currencyTL"/>
            <ImageView
                android:layout_marginEnd="5dp"
                android:id="@+id/deleteButton"
                android:layout_width="60dp"
                android:padding="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_delete_24"
                />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>