<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="#604885"
        android:layout_height="match_parent"
        tools:context=".OnBoarding2">


        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="250dp"
            android:layout_marginTop="40dp"
            android:layout_height="250dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/text1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/animation_second" />

        <TextView
            android:id="@+id/text1"
            android:textColor="@color/white"
            android:text="@string/text3"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/text2"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_margin="20dp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:text="@string/text4"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSkip"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/gec"
            app:cornerRadius="40dp"
            android:backgroundTint="#FF9800" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>